# cf-ready

./: .gitignore  .pre-commit-config.yaml  LICENSE  cp-ready.sh  main.py  pyproject.toml
